# practice-templates

./: README.md  Отзыв консультанта об учебной практике.docx
repo-checktool/: LICENSE  pyproject.toml  student_repo_analyzer.py
